--- a/index.html
+++ b/index.html
@@ -219,7 +219,9 @@
             <section class="questions__offer">
                 <h2 class="subtitle">Gracias por el apoyo!</h2>
                 <p class="questions__copy">Si les gustaría donarme para seguir avanzando, da click abajo!.</p>
-                <a href="#" class="cta">Donar.</a>
+                <a href="https://www.paypal.com/donate/?hosted_button_id=GG65L7F6HVY54" class="cta">Donar.</a>
+              
+                    
             </section>
         </section>
     </main>
