--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
 
     <meta name="title" content="Proyecto QL">
     <meta name="description"
-        content="Hola, soy una descripción que verás cuando busques algo de mi temática en Google.">
+        content="Somos un nuevo proyecto el QL.">
 
 
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://alexcgdesign.github.io">
+    <meta property="og:url" content="https://juanegalaz.github.io">
     <meta property="og:title" content="Proyecto QL">
     <meta property="og:description"
-        content="Hola, soy una descripción que verás cuando busques algo de mi temática en Google.">
-    <meta property="og:image" content="https://alexcgdesign.github.io/images/css.jpg">
+        content="Somos un nuevo proyecto el QL.">
+    <meta property="og:image" content="https://juanegalaz.github.io/images/css.jpg">
 
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://www.jordanalex.com/">
-    <meta property="twitter:title" content="Aprende CSS desde cero">
+    <meta property="twitter:url" content="https://juanegalaz.github.io/images/css.jpg">    ">
+    <meta property="twitter:title" content="Preyecto QL">
     <meta property="twitter:description"
-        content="Hola, soy una descripción que verás cuando busques algo de mi temática en Google.">
-    <meta property="twitter:image" content="https://alexcgdesign.github.io/images/css.jpg">
+        content="Somos un nuevo proyecto el QL.">
+    <meta property="twitter:image" content="https://juanegalaz.github.io/images/css.jpg">
 </head>
 
 <body>
@@ -233,7 +233,7 @@
 
                 <ul class="nav__link nav__link--footer">
                     <li class="nav__items">
-                        <a href="#" class="nav__links">Inicio</a>
+                        <a href="juanegalaz.github.io" class="nav__links">Inicio</a>
                     </li>
                     <li class="nav__items">
                         <a href="#" class="nav__links">Acerca de</a>
