--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             <div class="footer__social">
                 <a href="#" class="footer__icons"><img src="./imagenes/facebook.svg" class="footer__img"></a>
                 <a href="#" class="footer__icons"><img src="./imagenes/twitter.svg" class="footer__img"></a>
-                <a href="#" class="footer__icons"><img src="./imagenes/youtube.svg" class="footer__img"></a>
+                <a href="https://www.youtube.com/channel/UCSJbBkqR1D9mLNRwyNtecKw" class="footer__icons"><img src="./imagenes/youtube.svg" class="footer__img"></a>
             </div>
 
             <h3 class="footer__copyright">Derechos reservados &copy; Proyecto QL.</h3>
