--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta property="og:image" content="https://juanegalaz.github.io/images/css.jpg">
 
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://juanegalaz.github.io/images/css.jpg">    ">
+    <meta property="twitter:url" content="https://juanegalaz.github.io/images/css.jpg">
     <meta property="twitter:title" content="Preyecto QL">
     <meta property="twitter:description"
         content="Somos un nuevo proyecto el QL.">
