--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     <meta property="og:title" content="Proyecto QL">
     <meta property="og:description"
         content="Somos un nuevo proyecto el QL.">
-    <meta property="og:image" content="https://juanegalaz.github.io/images/css.jpg">
+    <meta property="og:image" content="https://juanegalaz.github.io/imagenes/jinx.jpg">
 
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://juanegalaz.github.io/images/css.jpg">
+    <meta property="twitter:url" content="https://juanegalaz.github.io/imagenes/jinx.jpg">
     <meta property="twitter:title" content="Preyecto QL">
     <meta property="twitter:description"
         content="Somos un nuevo proyecto el QL.">
-    <meta property="twitter:image" content="https://juanegalaz.github.io/images/css.jpg">
+    <meta property="twitter:image" content="https://juanegalaz.github.io/imagenes/jinx.jpg">
 </head>
 
 <body>
@@ -125,7 +125,7 @@
                     </div>
 
                     <figure class="testimony__picture">
-                        <img src="./imagenes/face3.jpg" class="testimony__img">
+                        <img src="./imagenes/kako.jpg" class="testimony__img">
                     </figure>
                 </section>
 
